--- a/MyWork.html
+++ b/MyWork.html
@@ -70,6 +70,17 @@ body, html {
   visibility: visible; /* Ensure the navbar is always visible */
   box-shadow: none; /* Remove any unnecessary box shadow */
 }
+/* Set the size of each grid item */
+.w3-col.m3 {
+  padding: 8px; /* Add some padding between the grid items */
+}
+
+.w3-col.m3 img {
+  width: 100%; /* Make the image take up the full width of the container */
+  height: 200px; /* Set a fixed height to make all images the same size */
+  object-fit: cover; /* Ensure the image covers the area, without distortion */
+  border-radius: 8px; /* Optional: Add rounded corners to the images */
+}
 
 
 /* Turn off parallax scrolling for tablets and phones */
