--- a/MyWork.html
+++ b/MyWork.html
@@ -250,17 +250,20 @@ body, html {
 </div>
 
 <!-- Container (Contact Section) -->
+<!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
   <h3 class="w3-center">WHERE I WORK</h3>
   <p class="w3-center"><em>I'd love your feedback!</em></p>
 
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
-      <img src="/w3images/map.jpg" class="w3-image w3-round" style="width:100%">
+      <!-- Embed the map with the given address -->
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6711.091711841827!2d-117.05436162372226!3d32.75124778530149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d956c6235bdc8d%3A0x995e6725a3873aaf!2s4021%20Aragon%20Dr%2C%20San%20Diego%2C%20CA%2092115!5e0!3m2!1sen!2sus!4v1740435301443!5m2!1sen!2sus" 
+              width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> San Diego, US<br>
+        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> 4021 Aragon Dr, San Diego, CA 92115<br>
         <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: 619-464-9695<br>
         <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: darylshifflett@gmail.com<br>
       </div>
@@ -287,14 +290,15 @@ body, html {
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
+    <a href="https://www.facebook.com/people/Daryl-Shifflett/pfbid035qkNosw5ryfjJjSuSuoYfVmJM8rdDkhxn1rq6y624ZhBseVwSvHv19d6p5JPLHdSl/" target="_blank" class="w3-hover-opacity"><i class="fa fa-facebook-official"></i></a>
+    <a href="https://www.instagram.com/dare.daryl/" target="_blank" class="w3-hover-opacity"><i class="fa fa-instagram"></i></a>
+    <a href="https://github.com/DareDaryl" target="_blank" class="w3-hover-opacity"><i class="fa fa-github"></i></a>
+    <a href="https://kr.pinterest.com/darylshifflett/" target="_blank" class="w3-hover-opacity"><i class="fa fa-pinterest-p"></i></a>
+    <a href="https://twitter.com/yourusername" target="_blank" class="w3-hover-opacity"><i class="fa fa-twitter"></i></a>
+    <a href="https://www.linkedin.com/in/daryl-shifflett-168a4331/" target="_blank" class="w3-hover-opacity"><i class="fa fa-linkedin"></i></a>
   </div>
 </footer>
+
  
 <script>
 // Modal Image Gallery
