--- a/MyWork.html
+++ b/MyWork.html
@@ -123,7 +123,7 @@ body, html {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">MY <span class="w3-hide-small">WEBSITE</span> PORTFOLIO</span>
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">MY <span class="w3-hide-small">SOFTWARE</span> PORTFOLIO</span>
   </div>
 </div>
 
@@ -131,21 +131,19 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">ABOUT ME</h3>
   <p class="w3-center"><em>I love coding!</em></p>
-  <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-    qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>I love coding! I never knew I would and had always been to afraid to learn it. I had thought the world of software engineering was available only to the geniuses and intellectual titans of the world. That the complexities of code would be too much for the average person to comprehend. One of the things that I've come to realize throughout my career and personal life, is that EVERYTHING is accessible if you give it enough time, attention and training. I had reached a stalemate in my career as an Operations Manager and really wanted something that would challenge the creative part of my brain. While I was going through this work existential crisis, I started googling classes for engineering and ended up reading about some very comprehensive and fun Software Bootcamps. I spent a month curating the one that would work best for me and ended up doing a 6 month long, 40 hours a week full stack coding course. I haven't looked back. </p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>Daryl Shifflett</b></p><br>
-      <img src="./assets/flannel.jpg" class="w3-round w3-image w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
-      <!--<img src="./assets/flannel.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">-->
+      <img src="./assets/flannel.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>Welcome to my website. There's something about the writing of code that I find pure and fulfilling. Seeing scripts and text turn into applications and websites feels almost mystical. The fact that you can bring into existence something that is merely a thought, excites me in a way I can't describe. 
+        While I search for a job in this field, I continue to code on the side and find ways to exercise and practice it. 
+        
+        I created this website to showcase my portfolio and to let you know a little bit about myself. Please see the projects below for a glimpse into my work. </p>
     </div>
   </div>
   <p class="w3-large w3-center w3-padding-16">Im really passionate about:</p>
@@ -249,7 +247,6 @@ body, html {
   </div>
 </div>
 
-<!-- Container (Contact Section) -->
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
   <h3 class="w3-center">WHERE I WORK</h3>
