--- a/MyWork.html
+++ b/MyWork.html
@@ -195,41 +195,66 @@ body, html {
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="./assets/Website.PNG" style="width:100%"; onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+        <img src="./assets/Website.PNG" style="width:100%;" onclick="onClick(this)" class="w3-hover-opacity" alt="Personal Website">
+        <div>
+            <a href="https://github.com/DareDaryl/Personal-website-" target="_blank">Visit our webpage</a>
+        </div>
     </div>
 
     <div class="w3-col m3">
-      <img src="./assets/RPG.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
+        <img src="./assets/RPG.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Simple RPG game">
+        <div>
+            <a href="https://github.com/DareDaryl/RPG-simple" target="_blank">Visit our webpage</a>
+        </div>
     </div>
 
     <div class="w3-col m3">
-      <img src="./assets/Magazine.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
+        <img src="./assets/Magazine.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Magazine Homepage">
+        <div>
+            <a href="https://github.com/DareDaryl/Magazine-Homepage" target="_blank">Visit our webpage</a>
+        </div>
     </div>
 
     <div class="w3-col m3">
-      <img src="./assets/mp3.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
+        <img src="./assets/mp3.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="MP3 Player">
+        <div>
+            <a href="https://github.com/DareDaryl/Music-player target="_blank">Visit our webpage</a>
+        </div>
     </div>
-  </div>
-
-  <div class="w3-row-padding w3-center w3-section">
-    <div class="w3-col m3">
-      <img src="./assets/Calories.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="./assets/Nutrition.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="./assets/flexbox.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="./assets/D_Mexico.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
-    </div>
-    <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
-  </div>
 </div>
+
+<div class="w3-row-padding w3-center w3-section">
+    <div class="w3-col m3">
+        <img src="./assets/Calories.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Calorie Counter">
+        <div>
+            <a href="https://github.com/DareDaryl/Calorie-Counter" target="_blank">Visit our webpage</a>
+        </div>
+    </div>
+
+    <div class="w3-col m3">
+        <img src="./assets/Nutrition.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
+        <div>
+            <a href="https://www.example6.com" target="_blank">Visit our webpage</a>
+        </div>
+    </div>
+
+    <div class="w3-col m3">
+        <img src="./assets/flexbox.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
+        <div>
+            <a href="https://www.example7.com" target="_blank">Visit our webpage</a>
+        </div>
+    </div>
+
+    <div class="w3-col m3">
+        <img src="./assets/D_Mexico.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
+        <div>
+            <a href="https://www.example8.com" target="_blank">Visit our webpage</a>
+        </div>
+    </div>
+
+    <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
+</div>
+
 
 <!-- Modal for full size images on click-->
 <div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
