--- a/MyWork.html
+++ b/MyWork.html
@@ -82,14 +82,13 @@ body, html {
   border-radius: 8px; /* Optional: Add rounded corners to the images */
 }
 
-
-/* Turn off parallax scrolling for tablets and phones */
+/* Turn off parallax scrolling for tablets and phones 
 @media only screen and (max-device-width: 1600px) {
   .bgimg-1, .bgimg-2, .bgimg-3 {
     background-attachment: scroll;
     min-height: 400px;
   }
-}
+}*/
 </style>
 </head>
 <body>
@@ -123,7 +122,7 @@ body, html {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">MY <span class="w3-hide-small">SOFTWARE</span> PORTFOLIO</span>
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">MY <span class="w3-hide-small">SOFTWARE</span> JOURNEY</span>
   </div>
 </div>
 
@@ -195,29 +194,36 @@ body, html {
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="./assets/Website.PNG" style="width:100%"; onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+      <img src="./assets/Website.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Personal Website">
+      <a href="https://github.com/DareDaryl/Personal-website-" target="_blank">View Project</a>
     </div>
 
     <div class="w3-col m3">
-      <img src="./assets/RPG.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
+      <img src="./assets/RPG.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Simple Role Playing Game">
+      <a href="https://github.com/DareDaryl/RPG-simple" target="_blank">View Project</a>
+    </div>
+    
+    <div class="w3-col m3">
+      <img src="./assets/Magazine.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Magazine Homepage">
+      <a href="https://github.com/DareDaryl/Magazine-Homepage" target="_blank">View Project</a>
     </div>
 
     <div class="w3-col m3">
-      <img src="./assets/Magazine.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
+      <img src="./assets/mp3.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="MP3 Music Player">
+      <a href="https://github.com/DareDaryl/Music-player" target="_blank">View Project</a>
     </div>
 
-    <div class="w3-col m3">
-      <img src="./assets/mp3.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
-    </div>
   </div>
 
   <div class="w3-row-padding w3-center w3-section">
     <div class="w3-col m3">
-      <img src="./assets/Calories.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
+      <img src="./assets/Calories.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Calorie Counter">
+      <a href="https://github.com/DareDaryl/Calorie-Counter" target="_blank">View Project</a>
     </div>
 
     <div class="w3-col m3">
-      <img src="./assets/Nutrition.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
+      <img src="./assets/Nutrition.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Nutrition Label">
+      <a href="https://github.com/DareDaryl/Calorie-Counter" target="_blank">View Project</a>
     </div>
 
     <div class="w3-col m3">
@@ -227,8 +233,11 @@ body, html {
     <div class="w3-col m3">
       <img src="./assets/D_Mexico.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
     </div>
-    <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
   </div>
+  <!-- Separate container for the Load More button to center it properly -->
+<div class="w3-row-padding w3-center">
+  <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
+</div>
 </div>
 
 <!-- Modal for full size images on click-->
