--- a/MyWork.html
+++ b/MyWork.html
@@ -160,7 +160,7 @@ body, html {
         I created this website to showcase my portfolio and to let you know a little bit about myself. Please see the projects below for a glimpse into my work. </p>
     </div>
   </div>
-  <p class="w3-large w3-center w3-padding-16">Im really passionate about:</p>
+  <p class="w3-large w3-center w3-padding-16">My three favorite languages are:</p>
   <p class="w3-wide"><i class="fa fa-camera"></i>HTML and CSS</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
@@ -242,13 +242,16 @@ body, html {
     </div>
 
     <div class="w3-col m3">
-      <img src="./assets/flexbox.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
+      <img src="./assets/flexbox.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Cats">
+      <a href="https://github.com/DareDaryl/Flexboxe" target="_blank">Flexbox Photo Gallery</a>
     </div>
 
     <div class="w3-col m3">
-      <img src="./assets/D_Mexico.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
+      <img src="./assets/project2-2.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Website with a search engine">
+      <a href="https://github.com/DareDaryl/Website-with-a-search-engine" target="_blank">Website with a Search Engine</a>
     </div>
   </div>
+  
   <!-- Separate container for the Load More button to center it properly -->
 <div class="w3-row-padding w3-center">
   <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
