--- a/MyWork.html
+++ b/MyWork.html
@@ -25,7 +25,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('./assets/IMG_7344\ \(1\).JPG');
+  background-image: url('./assets/waterfall.jpg');
   min-height: 100%;
 }
 
