--- a/MyWork.html
+++ b/MyWork.html
@@ -80,7 +80,7 @@ body, html {
   width: 100%; /* Make the image take up the full width of the container */
   height: 200px; /* Set a fixed height to make all images the same size */
   /*object-fit: cover; /* Ensure the image covers the area, without distortion */
-  object-fit: contain; /* Ensure the image covers the area, without distortion */
+  object-fit: cover; /* Ensure the image covers the area, without distortion */
   border-radius: 8px; /* Optional: Add rounded corners to the images*/
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);  /* Soft shadow */
   transition: transform 0.3s ease; /* Smooth scaling */
@@ -189,8 +189,8 @@ body, html {
     Happy Clients
   </div>
   <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">150+</span><br>
-    Meetings
+    <span class="w3-xlarge">4+</span><br>
+    Certifications
   </div>
 </div>
 
@@ -291,7 +291,9 @@ body, html {
         <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: 619-464-9695<br>
         <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: darylshifflett@gmail.com<br>
       </div>
-      <p>Swing by for a cup of <i class="fa fa-coffee"></i>, or leave me a note:</p>
+      <p>Currently accepting freelance projects&nbsp;<i class="fa fa-coffee"></i>, Feel free to leave your request below:</p>
+      <p>What can I build or create for you?</p>
+
       <form action="/action_page.php" target="_blank">
         <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
           <div class="w3-half">
