--- a/MyWork.html
+++ b/MyWork.html
@@ -224,7 +224,7 @@ body, html {
     </div>
 
     <div class="w3-col m3">
-      <img src="./assets/mp3.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="MP3 Music Player">
+      <img src="./assets/gymjams.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="MP3 Music Player">
       <a href="https://github.com/DareDaryl/Music-player" target="_blank">MP3 Music Player</a>
     </div>
 
